--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.inputsystem": "1.7.0",
     "com.unity.probuilder": "5.2.2",
     "com.unity.progrids": "3.0.3-preview.6",
+    "com.unity.recorder": "4.0.3",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
